--- a/people/alumni.html
+++ b/people/alumni.html
@@ -119,9 +119,14 @@
                                 </div>
                             </div>
                             <div class="img">
+                                <img src="../assets/member/2023김채은.jpeg" alt="Chae-Eun Kim">
+                                <p>Chae-Eun Kim</p>
+                                <p class="sub-text">Undergraduate researcher (2025. 9 ~ 2026. 2)<br><br>Security<br> Artificial Intelligence<br></p>
+                            </div> 
+                            <div class="img">
                                 <img src="../assets/member/2020여은성.png" alt="Eun-Sung Yeo">
                                 <p>Eun-Sung Yeo</p>
-                                <p class="sub-text">Undergraduate researcher (2024. 4 ~ 2025. 8)<br><br>Machine learning<br>Computer Vision</p>
+                                <p class="sub-text">Undergraduate researcher (2024. 4 ~ 2025. 8)<br><br>Machine Learning<br>Computer Vision</p>
                             </div>
                             <div class="img">
                                 <img src="../assets/member/2020공지혁.jpg" alt="Jee-Hyeok Kong">
@@ -141,17 +146,17 @@
                             <div class="img">
                                 <img src="../assets/member/alumni/이채운.jpg" alt="Chae-Un Lee">
                                 <p>Chae-Un Lee</p>
-                                <p class="sub-text">Undergraduate researcher (2023. 10 ~ 2024. 7 )<br><br>Machine learning<br>Front-end Programming</p>
+                                <p class="sub-text">Undergraduate researcher (2023. 10 ~ 2024. 7 )<br><br>Machine Learning<br>Front-end Programming</p>
                             </div>
                             <div class="img">
                                 <img src="../assets/member/alumni/2019이석호.jpg" alt="Seokho Lee">
                                 <p>Seok-ho Lee</p>
-                                <p class="sub-text">Undergraduate researcher (2023.10 ~ 2024.2)<br><br>Machine learning<br>System engineering<br></p>
+                                <p class="sub-text">Undergraduate researcher (2023.10 ~ 2024.2)<br><br>Machine Learning<br>System Engineering<br></p>
                             </div>
                             <div class="img">
                                 <img src="../assets/member/alumni/2018허민녕.jpg" alt="Min-young Her">
                                 <p>Min-young Her</p>
-                                <p class="sub-text">Undergraduate researcher (2023. 9~12)<br><br>Machine learning<br>Data mining<br>Aff: BNP Paribas Cardif</p>
+                                <p class="sub-text">Undergraduate researcher (2023. 9~12)<br><br>Machine Learning<br>Data mining<br>Aff: BNP Paribas Cardif</p>
                             </div>
                         </div>
                     </div>
