modify header menu

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#">Member <i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-content">
                         <a class="dropdown-item" href="./people/professor.html" data-target="professor">Professor</a>
-                        <a class="dropdown-item" href="./researcher.html" data-target="student">Researcher</a>
+                        <a class="dropdown-item" href="./people/researcher.html" data-target="student">Researcher</a>
                         <a class="dropdown-item" href="./people/alumni.html" data-target="alumni">Alumni</a>
                     </div>
                 </li>
